# daw-podcast-automation

./: .gitignore  PROJECT_TODO.md  README.md  build-macos-app.command  pyproject.toml
config/: podcast-default.yaml
docs/: logic-pro-mvp.md
macos/: DAW Podcast Automation.js  Logic Podcast Automation.js
src/daw_podcast_automation/: analyze.py  audio.py  cli.py  essentia_analyze.py  fs.py  gui.py  logic.py  prepare.py  profiles.py  runtime_logs.py  workflow.py
src/daw_podcast_automation/gui_assets/: app.js  index.html  style.css
