[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daw-podcast-automation"
version = "0.1.0"
description = "Automation workflow for podcast postproduction around Logic Pro projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
daw-podcast-automation = "daw_podcast_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
